@@ -1,3 +1,9 @@
+Designer MODELER-389
+====================
+
+ - LazyInitializationException on Device.deviceAttrs
+
+
 Designer 2.13.7 (2012-10-07 Rosemary)
 =====================================
 
